# Word_n

./: .gitmodules  CMakeLists.txt  README.md
include/: Word_n.hpp
src/: Main.cpp
tests/: Tests_word_n.cpp
